Added nodes numbers customization and edited titles and descriptions of window

--- a/randomwalk.ui
+++ b/randomwalk.ui
@@ -7,32 +7,52 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>654</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>随机走动模型</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
      <layout class="QGridLayout" name="gridLayout">
-      <item row="1" column="0">
+      <item row="0" column="1" colspan="2">
+       <widget class="QTextBrowser" name="textBrowser"/>
+      </item>
+      <item row="4" column="1">
        <widget class="QPushButton" name="pushButton">
         <property name="text">
          <string>开始</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="4" column="2">
        <widget class="QPushButton" name="pushButton_2">
         <property name="text">
          <string>停止</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="0" colspan="2">
-       <widget class="QTextBrowser" name="textBrowser"/>
+      <item row="1" column="1">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>请在右侧文本框中输入节点数目，请仅输入数字：</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QLineEdit" name="lineEdit">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>10</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
