--- a/randomwalk.ui
+++ b/randomwalk.ui
@@ -17,13 +17,6 @@
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
      <layout class="QGridLayout" name="gridLayout">
-      <item row="4" column="1">
-       <widget class="QPushButton" name="pushButton">
-        <property name="text">
-         <string>开始</string>
-        </property>
-       </widget>
-      </item>
       <item row="1" column="2">
        <widget class="QLineEdit" name="lineEdit">
         <property name="sizePolicy">
@@ -44,6 +37,13 @@
         </property>
        </widget>
       </item>
+      <item row="4" column="1">
+       <widget class="QPushButton" name="pushButton">
+        <property name="text">
+         <string>开始</string>
+        </property>
+       </widget>
+      </item>
       <item row="1" column="1">
        <widget class="QLabel" name="label">
         <property name="text">
@@ -52,7 +52,7 @@
        </widget>
       </item>
       <item row="0" column="1" colspan="2">
-       <widget class="QGraphicsView" name="graphicsView"/>
+       <widget class="QCustomPlot" name="widget" native="true"/>
       </item>
      </layout>
     </item>
@@ -60,6 +60,14 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QCustomPlot</class>
+   <extends>QWidget</extends>
+   <header>qcustomplot.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
