--- a/randomwalk.ui
+++ b/randomwalk.ui
@@ -52,7 +52,7 @@
        </widget>
       </item>
       <item row="0" column="1" colspan="2">
-       <widget class="QCustomPlot" name="widget" native="true"/>
+       <widget class="QCustomPlot" name="customPlot" native="true"/>
       </item>
      </layout>
     </item>
