--- a/nodeplot.ui
+++ b/nodeplot.ui
@@ -17,10 +17,17 @@
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
      <layout class="QGridLayout" name="gridLayout">
-      <item row="1" column="0">
-       <widget class="QLabel" name="label_2">
+      <item row="3" column="3">
+       <widget class="QLineEdit" name="input_VMAX">
         <property name="text">
-         <string>XMIN</string>
+         <string>20</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QLineEdit" name="input_VMIN">
+        <property name="text">
+         <string>10</string>
         </property>
        </widget>
       </item>
@@ -34,23 +41,6 @@
         </property>
         <property name="text">
          <string>50</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0" colspan="4">
-       <widget class="QCustomPlot" name="customPlot" native="true"/>
-      </item>
-      <item row="7" column="1">
-       <widget class="QPushButton" name="pushButton">
-        <property name="text">
-         <string>开始</string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="3">
-       <widget class="QPushButton" name="pushButton_2">
-        <property name="text">
-         <string>停止</string>
         </property>
        </widget>
       </item>
@@ -68,6 +58,27 @@
         </property>
        </widget>
       </item>
+      <item row="1" column="2">
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>XMAX</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="2">
+       <widget class="QLabel" name="label_8">
+        <property name="text">
+         <string>VMAX</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="3">
+       <widget class="QPushButton" name="pushButton_2">
+        <property name="text">
+         <string>停止</string>
+        </property>
+       </widget>
+      </item>
       <item row="2" column="1">
        <widget class="QLineEdit" name="input_YMIN">
         <property name="text">
@@ -75,24 +86,27 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="3">
-       <widget class="QLineEdit" name="input_XMAX">
+      <item row="7" column="1">
+       <widget class="QPushButton" name="pushButton">
         <property name="text">
-         <string>100</string>
+         <string>开始</string>
         </property>
        </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>XMIN</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" colspan="4">
+       <widget class="QCustomPlot" name="customPlot" native="true"/>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string>YMIN</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="2">
-       <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>XMAX</string>
         </property>
        </widget>
       </item>
@@ -103,27 +117,6 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="1">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>请在右侧文本框中输入节点数目，请仅输入数字：</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QLineEdit" name="input_VMIN">
-        <property name="text">
-         <string>10</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="3">
-       <widget class="QLineEdit" name="input_VMAX">
-        <property name="text">
-         <string>20</string>
-        </property>
-       </widget>
-      </item>
       <item row="3" column="0">
        <widget class="QLabel" name="label_7">
         <property name="text">
@@ -131,10 +124,38 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="2">
-       <widget class="QLabel" name="label_8">
+      <item row="1" column="3">
+       <widget class="QLineEdit" name="input_XMAX">
         <property name="text">
-         <string>VMAX</string>
+         <string>100</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QComboBox" name="comboBox">
+        <item>
+         <property name="text">
+          <string>Random Walk</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Random Direction</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Type</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="2">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>nNodes</string>
         </property>
        </widget>
       </item>
