Get rid of the unuseful "mainwindow"

--- a/nodeplot.ui
+++ b/nodeplot.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>随机走动模型</string>
+   <string>节点移动模型仿真程序</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_2">
