--- a/nodeplot.ui
+++ b/nodeplot.ui
@@ -143,6 +143,11 @@
           <string>Random Direction</string>
          </property>
         </item>
+        <item>
+         <property name="text">
+          <string>Random Waypoint</string>
+         </property>
+        </item>
        </widget>
       </item>
       <item row="4" column="0">
