--- a/nodeplot.ui
+++ b/nodeplot.ui
@@ -180,9 +180,6 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="0" colspan="4">
-       <widget class="QCustomPlot" name="customPlot" native="true"/>
-      </item>
       <item row="9" column="1">
        <widget class="QPushButton" name="pushButton">
         <property name="text">
@@ -225,20 +222,15 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="0" colspan="4">
+       <widget class="QWidget" name="widget" native="true"/>
+      </item>
      </layout>
     </item>
    </layout>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>QCustomPlot</class>
-   <extends>QWidget</extends>
-   <header>qcustomplot.h</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
