--- a/nodeplot.ui
+++ b/nodeplot.ui
@@ -263,7 +263,7 @@
       <item row="7" column="1">
        <widget class="QLineEdit" name="input_PMEAN">
         <property name="text">
-         <string>‭1.570796327‬</string>
+         <string>1.57</string>
         </property>
        </widget>
       </item>
